--- a/style.css
+++ b/style.css
@@ -1,7 +1,58 @@
 body {
   font-family: "Poppins", sans-serif;
+  background-color: #272044;
 }
 
-h1 {
-  color: blueviolet;
+header {
+  background-image: linear-gradient(
+      rgba(39, 32, 68, 0.6),
+      rgba(39, 32, 68, 0.6)
+    ),
+    url(/images/madrid-city.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  padding: 200px 0px;
+  color: white;
+  text-align: center;
+}
+
+.container {
+  max-width: 1400px;
+  margin: 0 auto;
+}
+
+header h1 {
+  font-size: 96px;
+  line-height: 1.5;
+  font-weight: 700;
+  margin: 0;
+}
+
+header h2 {
+  font-size: 40px;
+  line-height: 1.5;
+  margin: 0;
+  font-weight: 400;
+}
+
+header h3 {
+  font-size: 24px;
+  line-height: 1.5;
+  font-weight: 900;
+  letter-spacing: 5px;
+  text-transform: uppercase;
+}
+
+header a {
+  text-decoration: none;
+  color: #272044;
+  font-size: 14px;
+  font-weight: 700;
+  letter-spacing: 3px;
+  line-height: 1.5;
+  padding: 16px 32px;
+  background-color: white;
+  display: inline-block;
+  margin-top: 30px;
 }
