--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ h2 {
   line-height: 1.5;
   margin: 0;
   font-weight: 400;
+  font-style: italic;
 }
 
 h3 {
@@ -73,7 +74,7 @@ header a {
 
 .planning h3 {
   font-weight: 600 !important;
-  margin: 10px 0px 0px 0px;
+  margin: 50px 0px 0px 0px;
 }
 
 .grid-two-columns {
@@ -97,7 +98,12 @@ header a {
 }
 
 .socials h2 {
-  margin: 20px 0px 50px 0px;
+  margin: 20px 0px;
+}
+
+.socials h3 {
+  font-weight: 600 !important;
+  margin: 50px 0px 0px 0px;
 }
 
 .grid-three-columns {
