--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
   font-family: "Poppins", sans-serif;
   background-color: #272044;
+  color: #f1f1f1;
 }
 
 header {
@@ -13,7 +14,6 @@ header {
   background-repeat: no-repeat;
   background-position: center;
   padding: 200px 0px;
-  color: #f1f1f1;
   text-align: center;
 }
 
@@ -62,7 +62,6 @@ header a {
   max-width: 1000px;
   padding: 10px 200px;
   background-color: #12101d;
-  color: #f1f1f1;
 }
 
 .text-center {
@@ -94,7 +93,6 @@ header a {
 .socials {
   background-color: #181525;
   padding: 30px;
-  color: #f1f1f1;
 }
 
 .socials h2 {
@@ -118,4 +116,36 @@ header a {
   aspect-ratio: 16/9;
   border: 3px solid #f1f1f1;
   border-radius: 5px;
+}
+
+footer {
+  background-image: linear-gradient(
+      rgba(39, 32, 68, 0.6),
+      rgba(39, 32, 68, 0.6)
+    ),
+    url(/images/footer/madrid-street.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  opacity: 0.7;
+}
+
+footer h2 {
+  font-weight: 600;
+  margin: 0px 0px 50px 0px;
+  padding-top: 50px;
+  line-height: 1.5;
+  font-style: italic;
+}
+
+footer h4 {
+  margin: 0px;
+  padding: 30px 0px 30px 0px;
+}
+
+footer p {
+  font-size: 16px;
+  line-height: 2;
+  margin: 0px 0px 10px 0px;
+  padding-bottom: 30px;
 }
