--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ header a {
 
 .planning h3 {
   font-weight: 600 !important;
-  margin: 50px 0px 0px 0px;
+  margin: 20px 0px 0px 0px;
 }
 
 .grid-two-columns {
@@ -132,15 +132,11 @@ footer {
 
 footer h2 {
   font-weight: 600;
+  font-size: 40px;
   margin: 0px 0px 50px 0px;
   padding-top: 50px;
   line-height: 1.5;
   font-style: italic;
-}
-
-footer h4 {
-  margin: 0px;
-  padding: 30px 0px 30px 0px;
 }
 
 footer p {
@@ -148,4 +144,46 @@ footer p {
   line-height: 2;
   margin: 0px 0px 10px 0px;
   padding-bottom: 30px;
+}
+
+@media (max-width: 960px) {
+  header {
+    padding: 100px 0px;
+  }
+
+  h1 {
+    font-size: 48px;
+  }
+
+  h2 {
+    font-size: 20px;
+  }
+
+  h3 {
+    font-size: 12px;
+  }
+  header a {
+    font-size: 10px;
+  }
+
+  .planning {
+    max-width: 1400px;
+    padding: 10px 50px;
+  }
+
+  .grid-two-columns {
+    grid-template-columns: 1fr;
+  }
+
+  .grid-three-columns {
+    grid-template-columns: 1fr;
+  }
+
+  footer h2 {
+    font-size: 20px;
+  }
+
+  footer p {
+    font-size: 10px;
+  }
 }
