--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ header a {
   background-color: #f1f1f1;
   display: inline-block;
   margin-top: 30px;
+  border-radius: 5px;
 }
 
 header a:hover {
@@ -101,6 +102,56 @@ header a:hover {
   padding: 0px 15px;
   background-color: #272435;
   border-radius: 5px;
+}
+
+.cards-container {
+  padding: 50px;
+}
+.cards-container h3,
+p {
+  padding: 0 20px;
+}
+
+.cards-container a {
+  display: inline-block;
+  margin: 20px auto;
+}
+
+.card-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+  filter: contrast(70%);
+}
+
+.grid-two-columns-cards {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+.grid-cell-cards {
+  background-color: #181525;
+  border-radius: 5px;
+}
+
+.grid-cell-cards a {
+  display: block;
+  margin: 20px auto 0;
+  text-align: center;
+  color: red;
+  padding: 10px 0px;
+  background-color: #f1f1f1;
+  border-radius: 5px;
+  color: #272044;
+  font-size: 14px;
+  font-weight: 700;
+  text-decoration: none;
+  letter-spacing: 2px;
+}
+
+.grid-cell-cards a:hover {
+  background-color: #272044;
+  color: #f1f1f1;
 }
 
 .socials {
